--- a/_posts/2021-05-17-KubeEdge-部署.md
+++ b/_posts/2021-05-17-KubeEdge-部署.md
@@ -1,9 +1,14 @@
 ---
-layout:     post title:      KubeEdge 部署 subtitle:   KubeEdge 云端及边缘节点部署 date:       2021-05-17 author:     Haorong
-header-img: img/post-bg-cook.jpg catalog: true tags:
-
-- Cloud Computing - Edge Computing
-
+layout:     post 
+title:      KubeEdge 部署 
+subtitle:   KubeEdge 云端及边缘节点部署 
+date:       2021-05-17 
+author:     Haorong
+header-img: img/post-bg-cook.jpg 
+catalog: true 
+tags:
+- Cloud Computing 
+- Edge Computing
 ---
 
 ## 前言
