--- a/_posts/2021-05-17-KubeEdge-部署.md
+++ b/_posts/2021-05-17-KubeEdge-部署.md
@@ -4,7 +4,7 @@ title:      KubeEdge 部署
 subtitle:   KubeEdge 云端及边缘节点部署 
 date:       2021-05-17 
 author:     Haorong
-header-img: img/post-bg-cook.jpg 
+header-img: img/post-bg-map.jpg 
 catalog: true 
 tags:
 - Cloud Computing 
