--- a/_posts/2022-04-15-申请回忆录.md
+++ b/_posts/2022-04-15-申请回忆录.md
@@ -4,14 +4,63 @@ title:      申请回忆录
 subtitle:   写于2022-04-15 风雨飘摇中的上海
 date:       2022-04-15
 author:     Haorong
-header-img: img/post-bg-map.jpg 
+header-img: img/post-bg-uiuc-campus-shadow.jpg
 catalog: true 
 tags:
 - Application Season
 - 申请季
 ---
 
-## 前言
+## 选校
 
-……
+- 彩票：UCLA MSCS，CMU MSIN/MSMITE，GaTech MSCS，UIUC MCS，UCB EECS MEng
+- 冲刺：UCSD MSCS，UMich MSCSE，Columbia MSCS，Brown MSCS，GaTech MSCSE (COC)，UW-Madison PMP CS，CMU MSE-SV
+- 主申：USC CS28/HPC，UCSD EC79，UIUC ECE MEng，Cornell ECE MEng，Duke ECE MEng，UMich MSECE (SUGS 4+1)
+- 保底：Rice MCS，NYU Tandon MSCS
 
+## 录取结果
+
+- AD：
+  - 彩票：UIUC MCS (Final Decision)
+  - 冲刺：Brown MSCS
+  - 主申：Cornell ECE MEng，UMich MSECE (SUGS 4+1)
+  - 保底：Rice MCS
+- REJ：
+  - 彩票：UCLA MSCS，CMU MSIN/MSMITE，GaTech MSCS，UCB EECS MEng
+  - 冲刺：UCSD MSCS，UMich MSCSE，Columbia MSCS，UW-Madison PMP CS，CMU MSE-SV
+  - 主申：UCSD EC79，Duke ECE MEng
+  - 保底：NYU Tandon MSCS (劝转CE)
+- Pending：
+  - GaTech MSCSE (COC)，USC CS28/HPC，UIUC ECE MEng
+
+## 不确定因素
+
+“一个人的命运啊，当然要靠自我奋斗，但是也要考虑到历史的行程。”	——江学长
+
+### 扩招？缩招？
+
+> uiuc，ucsd，usc，rice……（附offer多多数据对比）
+
+### CS/ECE：内卷中心
+
+> CS和ECE越来越卷（附JI dp对比）
+
+### 疫情进行时：GPA通胀
+
+> 网课导致海本GPA普遍升高，陆本压分+内卷情况下GPA劣势明显
+
+
+
+## 隐藏内容：PYQ文案
+
+前有十连拒 但是玉米地🌽 
+
+离收到offer转眼已经一个月了，当时幻想着申请季最后一个月还能有别的惊喜，现实是和我所在的城市一起崩盘了，每收到一封拒信就越感谢UIUC能在茫茫人海中捞了我
+
+非常感谢每位帮助过我的朋友/师长，作为摆烂到12月才起步的DDL选手，少了任何一个人的帮助，我可能都无法重现现在的结果。祝大家都能心想事成，还在上海的各位不愁吃喝🐶
+
+特别致谢同初中高中本科硕士的mxy大哥，以及字节+482+申请季的战友cky，在我对申请一无所知的时候把我拉上了正轨，堪比褪色者的陨石杖和名刀月隐🐶 当然还有一直支持我的父母和🐷，410和512的hxdm，未来的室友香槟百事通zhy，爽快答应帮我写推荐信的继刚、王老板、pw和珺哥，还有很多很多帮助和鼓励过我的人
+
+我深知自己的平庸与怠惰，时常会有“德才不配位”的心态；面临着人生阶段的转折，希望自己能在岁月的磨练中努力成为更好的人吧
+
+<img src="/img/application/offer.jpg" alt="offer" style="zoom: 33%;" />
